# haskell_in_depth_examples

./: .gitignore  CHANGELOG.md  README.md  haskell-in-depth-examples.cabal
stockquotes/: HtmlReport.hs  Main.hs  Params.hs  QuoteData.hs  Statistics.hs
