cabal-version:      2.4
name:               haskell-in-depth-examples
version:            0.1.0.0
synopsis:           My implementations of examples from the book "Haskell in Depth"
author:             baalique
maintainer:         baalique@gmail.com
extra-source-files: 
    CHANGELOG.md
    README.md
data-files:
    data/quotes.csv

executable stockquotes
    main-is:          Main.hs
    other-modules:
        HtmlReport
      , Params
      , QuoteData
      , Statistics
    build-depends:    
        base ^>=4.14.3.0
      , blaze-colonnade
      , blaze-html
      , bytestring
      , colonnade
      , fmt
      , parsec
      , text
      , time
    hs-source-dirs:   stockquotes
    default-language: Haskell2010
